Fix top margin on smaller screens

--- a/client/extensions/woocommerce/app/reviews/style.scss
+++ b/client/extensions/woocommerce/app/reviews/style.scss
@@ -6,7 +6,10 @@
 }
 
 .reviews__filter-nav {
-	margin-top: 58px;
+	@include breakpoint( ">660px" ) {
+		margin-top: 58px;
+	}
+
 	.section-nav {
 		margin-top: 8px;
 	}
